--- a/css/all_quizzes.css
+++ b/css/all_quizzes.css
@@ -1,5 +1,5 @@
 .allQuizzesContainer {
-    background: linear-gradient(to right, #F1FFC4, #FFE2D6);
+    background: linear-gradient(to bottom, #FFE2D6, #FFD4C2);
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -7,7 +7,7 @@
 }
 
 .pageTitle {
-    color: #264653;
+    color: #6E7987;
     text-align: center;
     margin-bottom: 20px;
 }
@@ -63,10 +63,11 @@
 }
 
 .quiz-title-link {
-    color: #264653;
+    color: #005f73;
     text-decoration: none;
 }
 
 .quiz-title-link:hover {
     text-decoration: underline;
+    color: #004452;
 }
