--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,4 @@
+/* BOUTONS INDEX */
 .custom-btn {
     position: relative;
     display: inline-block;
@@ -6,46 +7,76 @@
     text-align: center;
     font-size: 16px;
     text-decoration: none;
-    color: #fcbf49;
     background: transparent;
     cursor: pointer;
     transition: ease-out 0.3s;
-    border: 2px solid #fcbf49;
+    border: 2px solid;
     border-radius: 10px;
-    box-shadow: inset 0 0 0 0 #fcbf49;
-  }
-  
-  .custom-btn:hover {
+    box-shadow: inset 0 0 0 0;
+}
+
+.custom-btn:hover {
     color: white;
-    box-shadow: inset 0 -100px 0 0 #fcbf49;
-  }
-  
+    box-shadow: inset 0 -100px 0 0;
+}
+
 .custom-btn:active {
     transform: scale(0.9);
-  }
-/* BOUTONS INDEX */
-  .custom-btn1 {
-    position: relative;
-    display: inline-block;
-    margin: 15px;
-    padding: 15px 30px;
-    text-align: center;
-    font-size: 16px;
+}
+
+.custom-btn1 {
+    color: #f4a261;
+    border-color: #f4a261;
+    box-shadow: inset 0 0 0 0 #f4a261;
+}
+
+.custom-btn1:hover {
+    box-shadow: inset 0 -100px 0 0 #f4a261;
+}
+
+.custom-btn2 {
+    color: #81b29a;
+    border-color: #81b29a;
+    box-shadow: inset 0 0 0 0 #81b29a;
+}
+
+.custom-btn2:hover {
+    box-shadow: inset 0 -100px 0 0 #81b29a;
+}
+
+/* FOOTER */
+.footer {
+    background-color: #264653;
+    color: #ffffff;
+    padding: 20px 0;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+}
+
+.footer p {
+    margin: 0;
+    color: #ffffff;
+}
+
+.footer-link {
+    color: #f4a261;
+    margin-left: 15px;
     text-decoration: none;
-    color: #fcbf49;
-    background: transparent;
-    cursor: pointer;
-    transition: ease-out 0.3s;
-    border: 2px solid #fcbf49;
-    border-radius: 10px;
-    box-shadow: inset 0 0 0 0 #fcbf49;
-  }
-  
-  .custom-btn1:hover {
-    color: white;
-    box-shadow: inset 0 -100px 0 0 #fcbf49;
-  }
-  
-.custom-btn1:active {
-    transform: scale(0.9);
-  }
+}
+
+.footer-link:hover {
+    color: #ffffff;
+    text-decoration: underline;
+}
+
+.footer .text-md-right {
+    text-align: right;
+}
+
+.footer-image {
+    position: absolute;
+    bottom: -10px; 
+    left: 10px; 
+    width: 250px; }
+
